CampingProject/force-app/main/default/objects/CampSite__c/CampSite__c.object-meta.xml
<CustomObject>
    <label>CampSite</label>
    <nameField>
        <label>CampSite Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CampSites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>