CampingProject/force-app/main/default/objects/CampSite__c/fields/Best_Sties__c.field-meta.xml
<CustomField>
    <fullName>Best_Sties__c</fullName>
    <description>Enter site numbers of preferred sites</description>
    <label>Best Sties</label>
    <length>255</length>
    <type>Text</type>
</CustomField>