CampingProject/force-app/main/default/objects/CampSite__c/fields/Electric_Hookup__c.field-meta.xml
<CustomField>
    <fullName>Electric_Hookup__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicate if the sites indicated as best site are electric, or if electric sites are available</description>
    <label>Electric Hookup</label>
    <type>Checkbox</type>
</CustomField>