CampingProject/force-app/main/default/objects/CampSite__c/fields/General_Notes__c.field-meta.xml
<CustomField>
    <fullName>General_Notes__c</fullName>
    <description>Best and worst about the camp ground or certain sites</description>
    <label>General Notes</label>
    <type>TextArea</type>
</CustomField>