CampingProject/force-app/main/default/objects/CampSite__c/fields/Last_Stay__c.field-meta.xml
<CustomField>
    <fullName>Last_Stay__c</fullName>
    <label>Last Stay</label>
    <type>Date</type>
</CustomField>