CampingProject/force-app/main/default/objects/CampSite__c/listViews/Close_Sites.listView-meta.xml
<ListView>
    <fullName>Close_Sites</fullName>
    <columns>NAME</columns>
    <columns>Last_Stay__c</columns>
    <filterScope>Mine</filterScope>
    <label>Close Sites</label>
</ListView>